# sincronizador

./: .gitignore  README.md  Sincronizador.spec  config.example.json  config.json  desktop.py  main.py  pyproject.toml  requirements-desktop.txt  requirements-server.txt  requirements.txt  server.py  sync.py
.github/workflows/: ci.yml
client/: __main__.py  client.py  config.json  constants.py  desktop.py  gui.py  http.py  logger.py  requirements.txt  sync_logic.py  utils.py
core/: client.py  config.py  constants.py  gui.py  sync_logic.py
server/: config.json  server.py
tests/: test_limited_reader.py  test_password.py  test_safe_path.py  test_sync_logic.py  test_utils.py
