[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sincronizador"
version = "0.2.0"
description = "Sincronizador de pastas Windows <-> Ubuntu via túnel Cloudflare"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Leonardo" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: End Users/Desktop",
    "Topic :: System :: Archiving :: Backup",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
client = [
    "requests>=2.31,<3",
    "zstandard>=0.21,<1",
    "customtkinter>=5.2,<6",
]
server = [
    "flask>=2.3,<4",
    "waitress>=2.1,<4",
    "zstandard>=0.21,<1",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=4.1,<6",
    "ruff>=0.5,<1",
]

[project.scripts]
sincronizador = "client.desktop:main"

[project.urls]
Homepage = "https://github.com/leobaray/sincronizador"

[tool.setuptools.packages.find]
include = ["client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
